kustomize/overlays/beta/fintlabs-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-utdanning-vurdering
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && (PathPrefix( `/utdanning/vurdering/fravar`) || PathPrefix( `/utdanning/vurdering/elevfravar`) || PathPrefix( `/utdanning/vurdering/fravarsoversikt`) || Path(`/utdanning/vurdering/admin/status`)) && Headers(`x-org-id`, `fintlabs.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-utdanning-vurdering
          port: 8080
